--- a/index.html
+++ b/index.html
@@ -36,6 +36,6 @@
   </div>
 
   <!-- Tu script separado -->
-  <script type="module" src="./script.js"></script>
+  <script type="module" src="./db/script.js"></script>
 </body>
 </html>
